--- a/style.css
+++ b/style.css
@@ -8,13 +8,13 @@ body {
 header {
     display: block;
     background-color:lightgray ;
-    margin-bottom: 10px;
+    margin: 10px 0;
     padding: 30px 0;
 }
 
 article {
     background-color: gray;
-    padding: 40px 15px 40px 15px;
+    padding: 20px 15px 20px 15px;
     color: lightgray;
     margin-top: 10px;
 }
@@ -27,7 +27,7 @@ article p {
 nav {
     display: block;
     background-color: lightgray;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     padding: 30px 0;
 }
 
@@ -36,17 +36,18 @@ section {
     float: left;
     background-color: lightgray;
     display: block;
-    margin-right: 1px;
+    margin-right: 10px;
     padding: 35px 5px 5px 5px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 
 aside {
-    width: 40%;
+    width: 41%;
     float: right;
     background-color: lightgray;
     padding: 30px 0;
     display: block;
+    height: 190px;
 }
 
 .clearfix::after {
@@ -62,4 +63,5 @@ footer {
     margin-top: 1px;
     clear: both;
     margin-top: 10px;
+    padding: 50px 0;
 }
