--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@ body {
     text-align: center;
     max-width: 85%;
     margin: auto;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    color: '#777';
+    background: '#777';
+    width: '960px';
+    font-size: '18px';
 }
 
 header {
