--- a/style.css
+++ b/style.css
@@ -4,10 +4,10 @@ body {
     max-width: 85%;
     margin: auto;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    color: '#777';
-    background: '#777';
-    width: '960px';
-    font-size: '18px';
+    color: #777;
+    background: #777;
+    width: 960px;
+    font-size: 18px;
 }
 
 header {
@@ -52,7 +52,7 @@ aside {
     background-color: lightgray;
     padding: 30px 0;
     display: block;
-    height: 190px;
+    height: 207px;
 }
 
 .clearfix::after {
